delete unused codes

--- a/index.html
+++ b/index.html
@@ -81,285 +81,7 @@
       <h1 class="historyTitle">歷史紀錄</h1>
       <div class="tableCon">
         <p class="noHistory" style="display: none" id="noHistory">沒有歷史紀錄</p>
-        <table class="historyTable" id="historyTable">
-          <thead>
-            <tr>
-              <th>編號</th>
-              <th>WPM</th>
-              <th>評級</th>
-              <th>模式</th>
-              <th>時間</th>
-            </tr>
-          </thead>
-          <tbody id="historyTableBody">
-            <tr class="historyRow">
-              <td class="historyIndex">2</td>
-              <td class="historyWpm">89 / 79</td>
-              <td class="historyRating">B-</td>
-              <td class="historyMode">名言 / 120秒</td>
-              <td class="historyTime">23 / 10 / 01 / 12:00</td>
-            </tr>
-            <tr class="historyRow">
-              <td class="historyIndex">1</td>
-              <td class="historyWpm">120 / 113</td>
-              <td class="historyRating">A</td>
-              <td class="historyMode">名言 / 15秒</td>
-              <td class="historyTime">23 / 10 / 01 / 12:00</td>
-            </tr>
-            <tr class="historyRow">
-              <td class="historyIndex">1</td>
-              <td class="historyWpm">120 / 113</td>
-              <td class="historyRating">A</td>
-              <td class="historyMode">名言 / 15秒</td>
-              <td class="historyTime">23 / 10 / 01 / 12:00</td>
-            </tr>
-            <tr class="historyRow">
-              <td class="historyIndex">1</td>
-              <td class="historyWpm">120 / 113</td>
-              <td class="historyRating">A</td>
-              <td class="historyMode">名言 / 15秒</td>
-              <td class="historyTime">23 / 10 / 01 / 12:00</td>
-            </tr>
-            <tr class="historyRow">
-              <td class="historyIndex">1</td>
-              <td class="historyWpm">120 / 113</td>
-              <td class="historyRating">A</td>
-              <td class="historyMode">名言 / 15秒</td>
-              <td class="historyTime">23 / 10 / 01 / 12:00</td>
-            </tr>
-            <tr class="historyRow">
-              <td class="historyIndex">1</td>
-              <td class="historyWpm">120 / 113</td>
-              <td class="historyRating">A</td>
-              <td class="historyMode">名言 / 15秒</td>
-              <td class="historyTime">23 / 10 / 01 / 12:00</td>
-            </tr>
-            <tr class="historyRow">
-              <td class="historyIndex">1</td>
-              <td class="historyWpm">120 / 113</td>
-              <td class="historyRating">A</td>
-              <td class="historyMode">名言 / 15秒</td>
-              <td class="historyTime">23 / 10 / 01 / 12:00</td>
-            </tr>
-            <tr class="historyRow">
-              <td class="historyIndex">1</td>
-              <td class="historyWpm">120 / 113</td>
-              <td class="historyRating">A</td>
-              <td class="historyMode">名言 / 15秒</td>
-              <td class="historyTime">23 / 10 / 01 / 12:00</td>
-            </tr>
-            <tr class="historyRow">
-              <td class="historyIndex">1</td>
-              <td class="historyWpm">120 / 113</td>
-              <td class="historyRating">A</td>
-              <td class="historyMode">名言 / 15秒</td>
-              <td class="historyTime">23 / 10 / 01 / 12:00</td>
-            </tr>
-            <tr class="historyRow">
-              <td class="historyIndex">1</td>
-              <td class="historyWpm">120 / 113</td>
-              <td class="historyRating">A</td>
-              <td class="historyMode">名言 / 15秒</td>
-              <td class="historyTime">23 / 10 / 01 / 12:00</td>
-            </tr>
-            <tr class="historyRow">
-              <td class="historyIndex">1</td>
-              <td class="historyWpm">120 / 113</td>
-              <td class="historyRating">A</td>
-              <td class="historyMode">名言 / 15秒</td>
-              <td class="historyTime">23 / 10 / 01 / 12:00</td>
-            </tr>
-            <tr class="historyRow">
-              <td class="historyIndex">1</td>
-              <td class="historyWpm">120 / 113</td>
-              <td class="historyRating">A</td>
-              <td class="historyMode">名言 / 15秒</td>
-              <td class="historyTime">23 / 10 / 01 / 12:00</td>
-            </tr>
-            <tr class="historyRow">
-              <td class="historyIndex">1</td>
-              <td class="historyWpm">120 / 113</td>
-              <td class="historyRating">A</td>
-              <td class="historyMode">名言 / 15秒</td>
-              <td class="historyTime">23 / 10 / 01 / 12:00</td>
-            </tr>
-            <tr class="historyRow">
-              <td class="historyIndex">1</td>
-              <td class="historyWpm">120 / 113</td>
-              <td class="historyRating">A</td>
-              <td class="historyMode">名言 / 15秒</td>
-              <td class="historyTime">23 / 10 / 01 / 12:00</td>
-            </tr>
-            <tr class="historyRow">
-              <td class="historyIndex">1</td>
-              <td class="historyWpm">120 / 113</td>
-              <td class="historyRating">A</td>
-              <td class="historyMode">名言 / 15秒</td>
-              <td class="historyTime">23 / 10 / 01 / 12:00</td>
-            </tr>
-            <tr class="historyRow">
-              <td class="historyIndex">1</td>
-              <td class="historyWpm">120 / 113</td>
-              <td class="historyRating">A</td>
-              <td class="historyMode">名言 / 15秒</td>
-              <td class="historyTime">23 / 10 / 01 / 12:00</td>
-            </tr>
-            <tr class="historyRow">
-              <td class="historyIndex">1</td>
-              <td class="historyWpm">120 / 113</td>
-              <td class="historyRating">A</td>
-              <td class="historyMode">名言 / 15秒</td>
-              <td class="historyTime">23 / 10 / 01 / 12:00</td>
-            </tr>
-            <tr class="historyRow">
-              <td class="historyIndex">1</td>
-              <td class="historyWpm">120 / 113</td>
-              <td class="historyRating">A</td>
-              <td class="historyMode">名言 / 15秒</td>
-              <td class="historyTime">23 / 10 / 01 / 12:00</td>
-            </tr>
-            <tr class="historyRow">
-              <td class="historyIndex">1</td>
-              <td class="historyWpm">120 / 113</td>
-              <td class="historyRating">A</td>
-              <td class="historyMode">名言 / 15秒</td>
-              <td class="historyTime">23 / 10 / 01 / 12:00</td>
-            </tr>
-            <tr class="historyRow">
-              <td class="historyIndex">1</td>
-              <td class="historyWpm">120 / 113</td>
-              <td class="historyRating">A</td>
-              <td class="historyMode">名言 / 15秒</td>
-              <td class="historyTime">23 / 10 / 01 / 12:00</td>
-            </tr>
-            <tr class="historyRow">
-              <td class="historyIndex">1</td>
-              <td class="historyWpm">120 / 113</td>
-              <td class="historyRating">A</td>
-              <td class="historyMode">名言 / 15秒</td>
-              <td class="historyTime">23 / 10 / 01 / 12:00</td>
-            </tr>
-            <tr class="historyRow">
-              <td class="historyIndex">1</td>
-              <td class="historyWpm">120 / 113</td>
-              <td class="historyRating">A</td>
-              <td class="historyMode">名言 / 15秒</td>
-              <td class="historyTime">23 / 10 / 01 / 12:00</td>
-            </tr>
-            <tr class="historyRow">
-              <td class="historyIndex">1</td>
-              <td class="historyWpm">120 / 113</td>
-              <td class="historyRating">A</td>
-              <td class="historyMode">名言 / 15秒</td>
-              <td class="historyTime">23 / 10 / 01 / 12:00</td>
-            </tr>
-            <tr class="historyRow">
-              <td class="historyIndex">1</td>
-              <td class="historyWpm">120 / 113</td>
-              <td class="historyRating">A</td>
-              <td class="historyMode">名言 / 15秒</td>
-              <td class="historyTime">23 / 10 / 01 / 12:00</td>
-            </tr>
-            <tr class="historyRow">
-              <td class="historyIndex">1</td>
-              <td class="historyWpm">120 / 113</td>
-              <td class="historyRating">A</td>
-              <td class="historyMode">名言 / 15秒</td>
-              <td class="historyTime">23 / 10 / 01 / 12:00</td>
-            </tr>
-            <tr class="historyRow">
-              <td class="historyIndex">1</td>
-              <td class="historyWpm">120 / 113</td>
-              <td class="historyRating">A</td>
-              <td class="historyMode">名言 / 15秒</td>
-              <td class="historyTime">23 / 10 / 01 / 12:00</td>
-            </tr>
-            <tr class="historyRow">
-              <td class="historyIndex">1</td>
-              <td class="historyWpm">120 / 113</td>
-              <td class="historyRating">A</td>
-              <td class="historyMode">名言 / 15秒</td>
-              <td class="historyTime">23 / 10 / 01 / 12:00</td>
-            </tr>
-            <tr class="historyRow">
-              <td class="historyIndex">1</td>
-              <td class="historyWpm">120 / 113</td>
-              <td class="historyRating">A</td>
-              <td class="historyMode">名言 / 15秒</td>
-              <td class="historyTime">23 / 10 / 01 / 12:00</td>
-            </tr>
-            <tr class="historyRow">
-              <td class="historyIndex">1</td>
-              <td class="historyWpm">120 / 113</td>
-              <td class="historyRating">A</td>
-              <td class="historyMode">名言 / 15秒</td>
-              <td class="historyTime">23 / 10 / 01 / 12:00</td>
-            </tr>
-            <tr class="historyRow">
-              <td class="historyIndex">1</td>
-              <td class="historyWpm">120 / 113</td>
-              <td class="historyRating">A</td>
-              <td class="historyMode">名言 / 15秒</td>
-              <td class="historyTime">23 / 10 / 01 / 12:00</td>
-            </tr>
-            <tr class="historyRow">
-              <td class="historyIndex">1</td>
-              <td class="historyWpm">120 / 113</td>
-              <td class="historyRating">A</td>
-              <td class="historyMode">名言 / 15秒</td>
-              <td class="historyTime">23 / 10 / 01 / 12:00</td>
-            </tr>
-            <tr class="historyRow">
-              <td class="historyIndex">1</td>
-              <td class="historyWpm">120 / 113</td>
-              <td class="historyRating">A</td>
-              <td class="historyMode">名言 / 15秒</td>
-              <td class="historyTime">23 / 10 / 01 / 12:00</td>
-            </tr>
-            <tr class="historyRow">
-              <td class="historyIndex">1</td>
-              <td class="historyWpm">120 / 113</td>
-              <td class="historyRating">A</td>
-              <td class="historyMode">名言 / 15秒</td>
-              <td class="historyTime">23 / 10 / 01 / 12:00</td>
-            </tr>
-            <tr class="historyRow">
-              <td class="historyIndex">1</td>
-              <td class="historyWpm">120 / 113</td>
-              <td class="historyRating">A</td>
-              <td class="historyMode">名言 / 15秒</td>
-              <td class="historyTime">23 / 10 / 01 / 12:00</td>
-            </tr>
-            <tr class="historyRow">
-              <td class="historyIndex">1</td>
-              <td class="historyWpm">120 / 113</td>
-              <td class="historyRating">A</td>
-              <td class="historyMode">名言 / 15秒</td>
-              <td class="historyTime">23 / 10 / 01 / 12:00</td>
-            </tr>
-            <tr class="historyRow">
-              <td class="historyIndex">1</td>
-              <td class="historyWpm">120 / 113</td>
-              <td class="historyRating">A</td>
-              <td class="historyMode">名言 / 15秒</td>
-              <td class="historyTime">23 / 10 / 01 / 12:00</td>
-            </tr>
-            <tr class="historyRow">
-              <td class="historyIndex">1</td>
-              <td class="historyWpm">120 / 113</td>
-              <td class="historyRating">A</td>
-              <td class="historyMode">名言 / 15秒</td>
-              <td class="historyTime">23 / 10 / 01 / 12:00</td>
-            </tr>
-            <tr class="historyRow">
-              <td class="historyIndex">1</td>
-              <td class="historyWpm">120 / 113</td>
-              <td class="historyRating">A</td>
-              <td class="historyMode">名言 / 15秒</td>
-              <td class="historyTime">23 / 10 / 01 / 12:00</td>
-            </tr>
-          </tbody>
-        </table>
+        <table class="historyTable" id="historyTable"></table>
       </div>
     </div>
 
@@ -369,7 +91,7 @@
         <p class="nst">
           Made by 馬比Maby<br />
           MabyType正體中文 v1.0<br />
-          https://mabylife.github.io/mabyType
+          https://github.com/Mabylife/MabyType-Mandarin<br />
         </p>
       </div>
     </div>
