--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MabyType-正體中文</title>
-    <meta name="description" content="MabyType, 臺灣最好看的中打練習網站" />
-    <meta name="keywords" content="typing, typing test, typing game, speed typing, accuracy typing, typing prectice" />
-    <meta name="author" content="Mabylife" />
+    <meta property="og:title" content="MabyType - 臺灣最好看的中文打字練習" />
+    <meta property="og:description" content="一個簡單到不用選字的中打網站" />
+    <meta name="robots" content="index, follow" />
     <link rel="stylesheet" href="style.css" />
     <link rel="icon shortcut" href="favicon.ico" />
   </head>
